1.3 add-controllers, поправил чек стайл, внес некоторые поправки